BOARD18 2.5.7 Release Notes
 
Changes from 2.5.6 Release:
Implemented fix for Issue 115 “Email address is not correct” error
Added configMailTemplate.php for more secure implementation.
Fixed BD18-token-adjust.py
Made various documentation changes.

BOARD18 2.5.6 Release Notes
 
Changes from 2.5.5 Release:
Implemented fix for Issue 94 - Punctuation in game title. 
Also fixed minor player name display issue on same page.

BOARD18 2.5.5 Release Notes
 
Release 2.5.4 had to be backed out because the PHP rename() function has a
known bug that causes it to fail in certain circumstances. The rcopy()
function has been added to BOARD18 to deal with this situation.

BOARD18 2.5.4 Release Notes
 
Changes from 2.5.3 Release:
Implemented fix for Issue 91 - Problems in loadGameBox.php. 

BOARD18 2.5.3 Release Notes
 
Changes from 2.5.2 Release:
Implemented fix for Issue 89 - Problem with function in new password code. 
Implemented fix for Issue 90 - Mail sending to modern SMTP servers fail.

BOARD18 2.5.2 Release Notes
 
Changes from 2.5.1 Release:
Implemented Issue 88 - Add delete function to player administration.
Added privacy notice to website.
Made minor edit to sendEmail.php.
Made documentation changes to board18Map7.php and board18Market7.php.

BOARD18 2.5.1 Release Notes
 
Changes from 2.5.0 Release:
Implemented Issue 82 -  Make "remember me" flag persistent.
Also updated the text on the login page. 

BOARD18 2.5.0 Release Notes

Changes from 2.4.7 Release:
Implemented fix for Issue 76 - Expanded email column in the players table.
Implemented Issue 81 - Implemented "Remember Me" logic in "Login" pages.
  Upgraders take note: The above changes required some database changes.
  See http://wiki.board18.org/w/Release_2.5.0_Upgrade_Note for more info.
Removed some obsolete utilities and updated the README. txt file in the
utility directory. Also made some minor documentation changes.

BOARD18 2.4.7 Release Notes

Changes from 2.4.6 Release: