@@ -1,11 +1,11 @@
 The BOARD18 server install instructions are available at 
-http://wiki.board18.org/w/How_To_Create_a_BOARD18_WEB_Site
+https://wiki.board18.org/w/How_To_Create_a_BOARD18_WEB_Site
 
 Usage information, in the form of a Player's Guide" is at
-http://wiki.board18.org/w/Player%27s_Guide
+https://wiki.board18.org/w/Player%27s_Guide
 
 You can report bugs and make enhancement requests by going to
-http://bugs.board18.org/describecomponents.cgi
+https://bugs.board18.org/describecomponents.cgi
 
 More information about this release can be found in the 
 "Release Notes.txt" file.
