@@ -13,8 +13,8 @@ A copy of this license can be found in the LICENSE.text file.
     <meta charset="utf-8" />
     <title>BOARD18 - Remote Play Tool For 18xx Style Games</title>
     <link rel="shortcut icon" href="images/favicon.ico" >
-    <link rel="stylesheet" href="style/board18com-160521.css" />
-    <link rel="stylesheet" href="style/board18Index-170804.css" />
+    <link rel="stylesheet" href="style/board18com.css" />
+    <link rel="stylesheet" href="style/board18Index.css" />
     <script type="text/javascript" src="scripts/jquery.js">
     </script> 
     <script type="text/javascript" src="scripts/sha256-min.js">
