@@ -34,8 +34,8 @@ if ($result) {
     <meta charset="utf-8" />
     <title>BOARD18 - Remote Play Tool For 18xx Style Games</title>
     <link rel="shortcut icon" href="images/favicon.ico" >
-    <link rel="stylesheet" href="style/board18com-160521.css" />
-    <link rel="stylesheet" href="style/board18New-161014.css" />
+    <link rel="stylesheet" href="style/board18com.css" />
+    <link rel="stylesheet" href="style/board18New.css" />
     <script type="text/javascript" src="scripts/jquery.js">
     </script>
     <script type="text/javascript" src="scripts/board18com.js">
